--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,7 @@
-GOLANG_SERVER_PORT=8080
+# this is a dev env
+
+APP_SERVER_PORT=8080
+WS_SERVER_PORT=8000
 
 POSTGRES_DB=lexichat
 POSTGRES_USER=myuser
